# SQLHomeWork

Lesson SQL-5/: CMakeLists.txt  main.cpp
LessonSQL-2/: CreateTable.sql  insertSQL.sql
LessonSQL-3/: InsertSQL3-2.sql  SelectSQL3-1.sql  insertSQL.sql
LessonSQL-4/: SelectMany.sql
LessonSQL-6/: .gitignore  CMakeLists.txt
LessonSQL-6/Task6.1/: .gitignore  Task6.1.cpp  Task6.1.sln  Task6.1.vcxproj  Task6.1.vcxproj.filters
